--- a/MobileBackup.Demo.WinForm/MobileBackup.Demo.WinForm.csproj
+++ b/MobileBackup.Demo.WinForm/MobileBackup.Demo.WinForm.csproj
@@ -47,6 +47,9 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="zlib.net">
+      <HintPath>..\lib\zlib.net.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Form1.cs">
